@@ -2,6 +2,13 @@
 
 	* Style.cs:
 	* Drawing/MapDrawer.cs:
+	* Xml/Serialization/MapSerializer.cs: add Style.LabelPosition and
+	Style.LabelPixelOffset
+
+2008-12-04  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Style.cs:
+	* Drawing/MapDrawer.cs:
 	* Xml/Serialization/MapSerializer.cs: add Style.LabelFontEmSize
 
 2008-12-04  Scott Ellington  <scott.ellington@gmail.com>
